--- a/graphs/learn-neptune-opencypher.ipynb
+++ b/graphs/learn-neptune-opencypher.ipynb
@@ -183,7 +183,6 @@
    "cell_type": "markdown",
    "id": "54355c1b-defc-4b74-9fce-055288d04517",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -605,6 +604,7 @@
     }
    ],
    "source": [
+    "# this deos't work\n",
     "import json\n",
     "node_labels_json = {\n",
     "    \"person\":\"first_name\",\n",
@@ -836,7 +836,6 @@
    "cell_type": "markdown",
    "id": "aefb65e5-1894-4d35-a008-f20b83d2d946",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2347,6 +2346,10 @@
    "execution_count": 113,
    "id": "167779ba-afd2-4b47-be07-502b324a9182",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2387,6 +2390,10 @@
    "execution_count": 112,
    "id": "2728d377-aad5-43b0-9889-5642fdef1089",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2419,6 +2426,10 @@
    "execution_count": 117,
    "id": "8b76e4a7-d971-4bd3-88f6-30972418f9db",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2450,6 +2461,10 @@
    "execution_count": 116,
    "id": "7d2e3f8b-872f-4c12-b1a7-ed9db3b47d08",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2506,6 +2521,10 @@
    "execution_count": 119,
    "id": "a5555ccc-a400-411a-b0ad-1ced98eba963",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2539,6 +2558,10 @@
    "execution_count": 127,
    "id": "9ce7660f-7ca3-45ca-ba2a-b662aa0cebe1",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2598,6 +2621,10 @@
    "execution_count": 120,
    "id": "28960726-212c-4b66-b7fe-3aedb680ea0c",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2633,6 +2660,10 @@
    "execution_count": 126,
    "id": "45918ad7-a952-46ae-a905-a7ca61b0e188",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2690,6 +2721,10 @@
    "execution_count": 121,
    "id": "02dd0dc0-bbae-4a3e-98a4-7f97e6d2ae4f",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2728,6 +2763,10 @@
    "execution_count": 125,
    "id": "a49d4e42-f53e-40d2-8bc8-4999d717a819",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2793,6 +2832,10 @@
    "execution_count": 123,
    "id": "d4681cf8-0c10-4cc4-a0c5-cdd7d46ae4ba",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2820,14 +2863,6 @@
     "ORDER BY rating_average DESC\n",
     "LIMIT 3"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b39e4d0e-2823-4adb-a833-8c5b7d4a5b9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2986,7 +3021,12 @@
    "id": "953018e1-3716-4f09-89e7-1aafff7f039c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%oc\n",
+    "MATCH (n)\n",
+    "DETACH DELETE n\n",
+    "RETURN n"
+   ]
   },
   {
    "cell_type": "code",
