--- a/graphs/notes.ipynb
+++ b/graphs/notes.ipynb
@@ -11,29 +11,29 @@
     "4. [LangChain Cypher Search: Tips & Tricks](https://medium.com/neo4j/langchain-cypher-search-tips-tricks-f7c9e9abca4d)\n",
     "5. [Conversational knowledge graphs](https://python.langchain.com/docs/modules/memory/types/kg)\n",
     "6. [Constructing knowledge graphs](https://python.langchain.com/docs/use_cases/graph/constructing)\n",
-    "7. [Github - Neo4j advanced rag template](https://github.com/langchain-ai/langchain/tree/master/templates/neo4j-advanced-rag)"
+    "7. [Github - Neo4j advanced rag template](https://github.com/langchain-ai/langchain/tree/master/templates/neo4j-advanced-rag)\n",
+    "8. [Github - graph-notebook](https://github.com/aws/graph-notebook)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%status` not found.\n"
-     ]
-    }
-   ],
    "source": [
-    "%status"
+    "### todo - later"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1. configure this environment to connect with Amazon Neptune. (current work check out Notebook instance named aws-neptune-agi-research)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,7 @@
     }
    ],
    "source": [
+    "# https://github.com/aws/graph-notebook\n",
     "! pip install graph-notebook --quiet"
    ]
   },
@@ -381,11 +382,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### next"
+   ]
   }
  ],
  "metadata": {
