restructure and add pattern - react

--- a/usecases/TODO_ai-research-assistant.ipynb
+++ b/usecases/TODO_ai-research-assistant.ipynb
@@ -1,16 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "- https://arxiv.org/pdf/2305.04091.pdf"
+    "https://blog.langchain.dev/exploring-uxs-besides-chat-with-research-assistant/"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
