--- a/patterns/react.ipynb
+++ b/patterns/react.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing utils/react_prompt.py\n"
+      "Overwriting utils/react_prompt.py\n"
      ]
     }
    ],
@@ -51,9 +51,9 @@
     "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
     "from langchain.prompts.chat import HumanMessagePromptTemplate\n",
     "\n",
-    "REACT_AGENT_PREFIX = \"\"\"You are an AI assistant. You always stays on topic of the human input and does not diverge from it.\"\"\"\n",
+    "AGENT_PREFIX = \"\"\"You are an AI assistant. You always stays on topic of the human input and does not diverge from it.\"\"\"\n",
     "\n",
-    "REACT_AGENT_FORMAT_INSTRUCTIONS = \"\"\"You have access to the following tools:\n",
+    "AGENT_FORMAT_INSTRUCTIONS = \"\"\"You have access to the following tools:\n",
     "{tool_descriptions}\n",
     "\n",
     "Use the following format:\n",
@@ -66,7 +66,7 @@
     "Thought: I now know the final answer\n",
     "Final Answer: the final answer to the original input question\"\"\"\n",
     "\n",
-    "REACT_AGENT_QUESTION_PROMPT = \"\"\"Remember to respond with your knowledge when the question does not correspond to any tool.\n",
+    "AGENT_QUESTION_PROMPT = \"\"\"Remember to respond with your knowledge when the question does not correspond to any tool.\n",
     "\n",
     "The previous conversation is within the <chat_history></chat_history> XML tags below, where H refers to the human and A refers to the assistant:\n",
     "<chat_history>\n",
@@ -76,15 +76,15 @@
     "Always append \"Final Answer:\" when returning the final answer.\n",
     "Question: {question}\"\"\"\n",
     "\n",
-    "REACT_AGENT_SUFFIX = \"\"\"Thought: {agent_scratchpad}\"\"\"\n",
+    "AGENT_SUFFIX = \"\"\"Thought: {agent_scratchpad}\"\"\"\n",
     "\n",
-    "def create_react_agent_prompt(\n",
+    "def create_agent_prompt(\n",
     "        tools: Sequence[BaseTool],\n",
-    "        prefix: str = REACT_AGENT_PREFIX,\n",
-    "        # context: str = REACT_AGENT_CONTEXT,\n",
-    "        format_instructions: str = REACT_AGENT_FORMAT_INSTRUCTIONS,\n",
-    "        question_prompt: str = REACT_AGENT_QUESTION_PROMPT,\n",
-    "        suffix: str = REACT_AGENT_SUFFIX,\n",
+    "        prefix: str = AGENT_PREFIX,\n",
+    "        # context: str = AGENT_CONTEXT,\n",
+    "        format_instructions: str = AGENT_FORMAT_INSTRUCTIONS,\n",
+    "        question_prompt: str = AGENT_QUESTION_PROMPT,\n",
+    "        suffix: str = AGENT_SUFFIX,\n",
     "    ) -> PromptTemplate:\n",
     "    \n",
     "        human_prompt = PromptTemplate(\n",
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "from utils.react_prompt import create_react_agent_prompt\n",
+    "from utils.react_prompt import create_agent_prompt\n",
     "from utils.tools import tools\n",
     "\n",
     "# tools = tools[:2] \n",
