--- a/patterns/react.ipynb
+++ b/patterns/react.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,11 +67,8 @@
     "Final Answer: the final answer to the original input question\"\"\"\n",
     "\n",
     "AGENT_QUESTION_PROMPT = \"\"\"Remember to respond with your knowledge when the question does not correspond to any tool.\n",
-    "\n",
-    "The previous conversation is within the <chat_history></chat_history> XML tags below, where H refers to the human and A refers to the assistant:\n",
-    "<chat_history>\n",
+    "The previous conversation is below, where H refers to the human and A refers to the assistant:\n",
     "{chat_history}\n",
-    "</chat_history>\n",
     "\n",
     "Always append \"Final Answer:\" when returning the final answer.\n",
     "Question: {question}\"\"\"\n",
@@ -115,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +130,7 @@
     "# tools = tools[:2] \n",
     "print(f\"len(tools): {len(tools)}\")\n",
     "\n",
-    "prompt = create_react_agent_prompt(tools)\n",
+    "prompt = create_agent_prompt(tools)\n",
     "# print(prompt.messages[0].prompt.template)\n",
     "\n",
     "llm = BedrockChat(\n",
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,133 +238,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;1m\u001b[1;3mOkay, to find Einstein's top 3 research papers, I will need to search for information on his most influential or highly-cited scientific publications.\n",
-      "\n",
+      "\u001b[32;1m\u001b[1;3mThought: To find Einstein's top 3 research papers, I should search for information on his most influential or highly cited scientific publications.\n",
       "Action: search-google-scholar\n",
-      "Action Input: \"albert einstein\" most influential research papers\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3mTitle: Albert Einstein as a philosopher of science\n",
-      "Authors: DA Howard\n",
-      "Summary: DA Howard - Physics today, 2005 - pubs.aip.org\n",
-      "Total-Citations: 109\n",
+      "Action Input: \"einstein most influential research papers\"\u001b[0m\u001b[38;5;200m\u001b[1;3mTitle: Why Einstein became famous in America\n",
+      "Authors: \n",
+      "Summary: M Missner - Social studies of science, 1985 - journals.sagepub.com\n",
+      "Total-Citations: 87\n",
+      "\n",
+      "Title: E= Einstein: His life, his thought, and his influence on our culture\n",
+      "Authors: M Bartusiak\n",
+      "Summary: D Goldsmith, M Bartusiak - 2008 - books.google.com\n",
+      "Total-Citations: 20\n",
+      "\n",
+      "Title: Einstein\n",
+      "Authors: \n",
+      "Summary: T Ryckman - 2017 - taylorfrancis.com\n",
+      "Total-Citations: 35\n",
       "\n",
       "Title: Albert Einstein\n",
       "Authors: \n",
       "Summary: A Einstein - Quantum Algebra and Symmetry, 2005 - researchgate.net\n",
       "Total-Citations: 30\n",
-      "\n",
-      "Title: Albert Einstein: creator and rebel\n",
-      "Authors: \n",
-      "Summary: B Hoffmann - 2019 - books.google.com\n",
-      "Total-Citations: 485\n",
-      "\n",
-      "Title: Albert Einstein: his influence on physics, philosophy and politics\n",
-      "Authors: \n",
-      "Summary: PC Aichelburg, RU Sexl - 2012 - books.google.com\n",
-      "Total-Citations: 8\n",
-      "\n",
-      "Title: Subtle is the Lord: The Science and the Life of Albert Einstein: The Science and the Life of Albert Einstein\n",
-      "Authors: \n",
-      "Summary: A Pais - 1982 - books.google.com\n",
-      "Total-Citations: 3565\n",
-      "\n",
-      "Title: The Education of Albert Einstein\n",
-      "Authors: \n",
-      "Summary: CA Gearhart - 1992 - Citeseer\n",
-      "Total-Citations: 3\n",
-      "\n",
-      "Title: Albert Einstein\n",
-      "Authors: DA Howard\n",
-      "Summary: DA Howard - … Life, His Thought and His Influence on Our Culture, 2006 - books.google.com\n",
-      "Total-Citations: 2\n",
-      "\n",
-      "Title: Albert Einstein: a biographical portrait\n",
-      "Authors: \n",
-      "Summary: A Reiser - 1931 - libarch.nmu.org.ua\n",
-      "Total-Citations: 86\n",
-      "\n",
-      "Title: Albert Einstein\n",
-      "Authors: \n",
-      "Summary: J Green - 2003 - books.google.com\n",
-      "Total-Citations: 10\n",
-      "\n",
-      "Title: A review of the contributions of Albert Einstein to Earth Sciences—in commemoration of the World Year of Physics\n",
-      "Authors: J Martínez-Frías,D Hochberg\n",
-      "Summary: J Martínez-Frías, D Hochberg, F Rull - Naturwissenschaften, 2006 - Springer\n",
-      "Total-Citations: 10\u001b[0m\u001b[32;1m\u001b[1;3mThought: The search results provide some potentially relevant information on Einstein's influential research papers, but do not directly list his top 3 publications. The book \"Subtle is the Lord: The Science and the Life of Albert Einstein\" seems promising as it has a high citation count and may contain details on his key works. To better answer this question, I should try searching more specifically for lists or rankings of Einstein's seminal papers.\n",
-      "\n",
-      "Action: search-google-scholar \n",
-      "Action Input: \"albert einstein\" top 3 research papers\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3mTitle: The exceptional brain of Albert Einstein\n",
-      "Authors: \n",
-      "Summary: SF Witelson, DL Kigar, T Harvey - The lancet, 1999 - thelancet.com\n",
-      "Total-Citations: 359\n",
-      "\n",
-      "Title: Albert Einstein\n",
-      "Authors: \n",
-      "Summary: A Einstein - Quantum Algebra and Symmetry, 2005 - researchgate.net\n",
-      "Total-Citations: 30\n",
-      "\n",
-      "Title: Albert Einstein\n",
-      "Authors: \n",
-      "Summary: E Doka - DOGU'DAN BATI'YA, 1975 - academia.edu\n",
-      "Total-Citations: 8\n",
-      "\n",
-      "Title: Albert Einstein: creator and rebel\n",
-      "Authors: \n",
-      "Summary: B Hoffmann - 2019 - books.google.com\n",
-      "Total-Citations: 485\n",
-      "\n",
-      "Title: The ultimate quotable Einstein\n",
-      "Authors: \n",
-      "Summary: A Einstein - 2011 - books.google.com\n",
-      "Total-Citations: 134\n",
-      "\n",
-      "Title: Albert Einstein's brain\n",
-      "Authors: R Salvatori\n",
-      "Summary: R Salvatori - The Lancet, 1999 - thelancet.com\n",
-      "Total-Citations: 41\n",
       "\n",
       "Title: Albert Einstein on his seventieth birthday\n",
       "Authors: \n",
       "Summary: RA Millikan - Reviews of Modern Physics, 1949 - APS\n",
       "Total-Citations: 47\n",
       "\n",
-      "Title: A review of the contributions of Albert Einstein to Earth Sciences—in commemoration of the World Year of Physics\n",
-      "Authors: J Martínez-Frías,D Hochberg\n",
-      "Summary: J Martínez-Frías, D Hochberg, F Rull - Naturwissenschaften, 2006 - Springer\n",
-      "Total-Citations: 10\n",
+      "Title: Albert Einstein as a philosopher of science\n",
+      "Authors: DA Howard\n",
+      "Summary: DA Howard - Physics today, 2005 - pubs.aip.org\n",
+      "Total-Citations: 109\n",
       "\n",
-      "Title: The corpus callosum of Albert Einstein's brain: another clue to his high intelligence?\n",
-      "Authors: D Falk,D Yin\n",
-      "Summary: W Men, D Falk, T Sun, W Chen, J Li, D Yin, L Zang… - Brain, 2014 - academic.oup.com\n",
-      "Total-Citations: 94\n",
-      "\n",
-      "Title: The Education of Albert Einstein\n",
+      "Title: Einstein 1905: the standard of greatness\n",
       "Authors: \n",
-      "Summary: CA Gearhart - 1992 - Citeseer\n",
-      "Total-Citations: 3\u001b[0m\u001b[32;1m\u001b[1;3mThought: The search results provide some potentially relevant background information on Einstein and his brain, but still do not directly list or rank his top 3 research papers. To better answer this specific question, I will need to search more targeted sources that focus on analyzing and ranking Einstein's most influential scientific publications.\n",
+      "Summary: JS Rigden - 2005 - books.google.com\n",
+      "Total-Citations: 68\n",
       "\n",
-      "Action: search-google\n",
-      "Action Input: \"albert einstein top 3 most influential research papers\"\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3mIt is the year in which he published three papers that should have earned him three Nobel prizes, instead of just one: the paper on the special theory of relativity; the paper on Brownian motion, which earned him the Nobel prize; and the one, which he called `very revolutionary' in a letter to a friend, formulating the ...\u001b[0m\u001b[32;1m\u001b[1;3mThought: Based on the search results, it seems Albert Einstein's top 3 most influential research papers are:\n",
+      "Title: Einstein as myth and muse\n",
+      "Authors: \n",
+      "Summary: AJ Friedman, CC Donley - 1989 - books.google.com\n",
+      "Total-Citations: 190\n",
       "\n",
-      "1. His 1905 paper on the Special Theory of Relativity, which revolutionized our understanding of space, time, and energy.\n",
+      "Title: Albert Einstein: creator and rebel\n",
+      "Authors: \n",
+      "Summary: B Hoffmann - 2019 - books.google.com\n",
+      "Total-Citations: 485\n",
       "\n",
-      "2. His 1905 paper explaining the phenomenon of Brownian motion, for which he won the 1921 Nobel Prize in Physics. This provided experimental evidence for the existence of atoms and molecules.\n",
+      "Title: Einstein, Picasso\n",
+      "Authors: \n",
+      "Summary: AI Miller - Physics education, 2004 - iopscience.iop.org\n",
+      "Total-Citations: 58\u001b[0m\u001b[32;1m\u001b[1;3mThought: The search results provide some biographical and philosophical works about Einstein, but do not directly answer the question about his top 3 research papers. To find that, I should search more specifically for his scientific publications.\n",
       "\n",
-      "3. His 1905 paper on the photoelectric effect, which laid the groundwork for the development of quantum mechanics. This paper introduced the concept that light is made up of individual particles (photons).\n",
+      "Action: search-google-scholar\n",
+      "Action Input: \"einstein most cited research papers\"\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mTitle: Einstein's miraculous year: five papers that changed the face of physics\n",
+      "Authors: \n",
+      "Summary: A Einstein - 2005 - books.google.com\n",
+      "Total-Citations: 79\n",
       "\n",
-      "These three groundbreaking papers published in 1905, known as Einstein's \"Annus Mirabilis\" (Miracle Year), transformed modern physics and secured his legacy as one of the greatest scientific minds in history.\n",
+      "Title: Einstein versus the physical review\n",
+      "Authors: D Kennefick\n",
+      "Summary: D Kennefick - Physics Today, 2005 - pubs.aip.org\n",
+      "Total-Citations: 166\n",
       "\n",
-      "Final Answer: Albert Einstein's top 3 most influential research papers are:\n",
+      "Title: How Einstein found his field equations: 1912-1915\n",
+      "Authors: J Norton\n",
+      "Summary: J Norton - Historical studies in the physical sciences, 1984 - JSTOR\n",
+      "Total-Citations: 297\n",
       "\n",
-      "1. His 1905 paper on the Special Theory of Relativity\n",
-      "2. His 1905 paper on Brownian motion, for which he won the Nobel Prize \n",
-      "3. His 1905 paper on the photoelectric effect, which introduced the concept of light as photons\u001b[0m\n",
+      "Title: Why noNew Einstein'?\n",
+      "Authors: L Smolin\n",
+      "Summary: L Smolin - Physics today, 2005 - math.ucr.edu\n",
+      "Total-Citations: 28\n",
+      "\n",
+      "Title: The ultimate quotable Einstein\n",
+      "Authors: \n",
+      "Summary: A Einstein - 2011 - books.google.com\n",
+      "Total-Citations: 134\n",
+      "\n",
+      "Title: Albert Einstein\n",
+      "Authors: \n",
+      "Summary: A Einstein - Quantum Algebra and Symmetry, 2005 - researchgate.net\n",
+      "Total-Citations: 30\n",
+      "\n",
+      "Title: Why Einstein became famous in America\n",
+      "Authors: \n",
+      "Summary: M Missner - Social studies of science, 1985 - journals.sagepub.com\n",
+      "Total-Citations: 87\n",
+      "\n",
+      "Title: Mach, Einstein, and the search for reality\n",
+      "Authors: \n",
+      "Summary: G Holton - Daedalus, 1968 - JSTOR\n",
+      "Total-Citations: 152\n",
+      "\n",
+      "Title: Einstein's miraculous year\n",
+      "Authors: \n",
+      "Summary: J Stachel - Five Papers that Changed, 1998 - sites.pitt.edu\n",
+      "Total-Citations: 296\n",
+      "\n",
+      "Title: Scientific creativity: A comparative study of Henri Poincaré and Albert Einstein\n",
+      "Authors: \n",
+      "Summary: AI Miller - Creativity Research Journal, 1992 - Taylor & Francis\n",
+      "Total-Citations: 91\u001b[0m\u001b[32;1m\u001b[1;3mThought: The search results provide some useful information on Einstein's most influential and highly cited scientific papers. Based on the citations and descriptions, his top 3 research papers appear to be:\n",
+      "\n",
+      "1. \"Annus Mirabilis\" papers (1905) - A series of 4 groundbreaking papers published in 1905 that introduced revolutionary ideas in physics, including the photoelectric effect, Brownian motion, special relativity, and the famous equation E=mc^2. These papers laid the foundation for modern physics.\n",
+      "\n",
+      "2. \"The Field Equations of Gravitation\" (1915) - Einstein's general theory of relativity paper that introduced a new understanding of gravity as a distortion of space and time. This paper contained the famous field equations of general relativity.\n",
+      "\n",
+      "3. \"On the Electrodynamics of Moving Bodies\" (1905) - The paper that first introduced Einstein's special theory of relativity, one of the two pillars of modern physics.\n",
+      "\n",
+      "Final Answer: Based on their scientific impact and number of citations, Einstein's top 3 research papers are considered to be:\n",
+      "\n",
+      "1. The \"Annus Mirabilis\" papers of 1905 \n",
+      "2. \"The Field Equations of Gravitation\" (1915) on general relativity\n",
+      "3. \"On the Electrodynamics of Moving Bodies\" (1905) on special relativity\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "CPU times: user 533 ms, sys: 18.1 ms, total: 551 ms\n",
-      "Wall time: 17 s\n"
+      "CPU times: user 357 ms, sys: 40.3 ms, total: 397 ms\n",
+      "Wall time: 15.6 s\n"
      ]
     }
    ],
@@ -376,6 +365,27 @@
     "result = agent_executor.invoke({\n",
     "    \"question\": \"what are Einstein's top 3 research papers ?\",\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on their scientific impact and number of citations, Einstein's top 3 research papers are considered to be:\n",
+      "\n",
+      "1. The \"Annus Mirabilis\" papers of 1905 \n",
+      "2. \"The Field Equations of Gravitation\" (1915) on general relativity\n",
+      "3. \"On the Electrodynamics of Moving Bodies\" (1905) on special relativity\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result[\"output\"])"
    ]
   },
   {
@@ -826,10 +836,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Something like this - BaseMultiActionAgent\n",
+    "\n",
+    "- https://github.com/langchain-ai/langchain/blob/master/libs/langchain/langchain/agents/openai_functions_multi_agent/base.py\n",
+    "- https://twitter.com/LangChainAI/status/1644387089851781120\n",
+    "- https://github.com/langchain-ai/langchain/blob/master/cookbook/custom_multi_action_agent.ipynb\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write prompts to test the below output parsers:\n",
+    "- ReActJsonSingleInputOutputParser()\n",
+    "- ReActSingleInputOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
