about to start relfexion

--- a/patterns/react-xml.ipynb
+++ b/patterns/react-xml.ipynb
@@ -1288,10 +1288,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### references"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try modifying prompts for better performance. take inspiration from:\n",
+    "- https://github.com/langchain-ai/langchain/issues/18434\n",
+    "- https://smith.langchain.com/hub/shoggoth13/xml-agent?organizationId=00a1fc16-cd40-5852-bcf2-9353e12f11ee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
