--- a/patterns/react.ipynb
+++ b/patterns/react.ipynb
@@ -112,14 +112,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(tools): 9\n"
+      "len(tools): 9\n",
+      "You are an AI assistant. You always stays on topic of the human input and does not diverge from it.\n",
+      "You have access to the following tools:\n",
+      "{tool_descriptions}\n",
+      "\n",
+      "Use the following format:\n",
+      "Question: the input question you must answer\n",
+      "Thought: you should always think about what to do\n",
+      "Action: the action to take, should be one of [{tool_names}]\n",
+      "Action Input: the input to the action\n",
+      "Observation: the result of the action\n",
+      "... (this Thought/Action/Action Input/Observation can repeat N times)\n",
+      "Thought: I now know the final answer\n",
+      "Final Answer: the final answer to the original input question\n",
+      "Remember to respond with your knowledge when the question does not correspond to any tool.\n",
+      "The previous conversation is below, where H refers to the human and A refers to the assistant:\n",
+      "{chat_history}\n",
+      "\n",
+      "Always append \"Final Answer:\" when returning the final answer.\n",
+      "Question: {question}\n",
+      "Thought: {agent_scratchpad}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'BedrockChat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m prompt \u001b[38;5;241m=\u001b[39m create_agent_prompt(tools)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(prompt\u001b[38;5;241m.\u001b[39mmessages[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mprompt\u001b[38;5;241m.\u001b[39mtemplate)\n\u001b[0;32m---> 10\u001b[0m llm \u001b[38;5;241m=\u001b[39m \u001b[43mBedrockChat\u001b[49m(\n\u001b[1;32m     11\u001b[0m     model_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124manthropic.claude-3-sonnet-20240229-v1:0\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# model_id=\"anthropic.claude-3-haiku-20240307-v1:0\",\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     client\u001b[38;5;241m=\u001b[39mboto3\u001b[38;5;241m.\u001b[39mclient(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbedrock-runtime\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m     14\u001b[0m     model_kwargs\u001b[38;5;241m=\u001b[39m{\n\u001b[1;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_tokens\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m4096\u001b[39m, \n\u001b[1;32m     16\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemperature\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.5\u001b[39m,\n\u001b[1;32m     17\u001b[0m     },\n\u001b[1;32m     18\u001b[0m     streaming\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     19\u001b[0m     region_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mus-west-2\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m# region_name=\"us-east-1\",\u001b[39;00m\n\u001b[1;32m     21\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BedrockChat' is not defined"
      ]
     }
    ],
@@ -131,7 +162,7 @@
     "print(f\"len(tools): {len(tools)}\")\n",
     "\n",
     "prompt = create_agent_prompt(tools)\n",
-    "# print(prompt.messages[0].prompt.template)\n",
+    "print(prompt.messages[0].prompt.template)\n",
     "\n",
     "llm = BedrockChat(\n",
     "    model_id=\"anthropic.claude-3-sonnet-20240229-v1:0\",\n",
@@ -854,6 +885,60 @@
     "- ReActJsonSingleInputOutputParser()\n",
     "- ReActSingleInputOutputParser()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://github.com/langchain-ai/langchain/blob/master/libs/core/langchain_core/output_parsers/json.py#L128\n",
+    "\n",
+    "def parse_json_markdown(\n",
+    "    json_string: str, *, parser: Callable[[str], Any] = parse_partial_json\n",
+    ") -> dict:\n",
+    "    \"\"\"\n",
+    "    Parse a JSON string from a Markdown string.\n",
+    "\n",
+    "    Args:\n",
+    "        json_string: The Markdown string.\n",
+    "\n",
+    "    Returns:\n",
+    "        The parsed JSON object as a Python dictionary.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return _parse_json(json_string, parser=parser)\n",
+    "    except json.JSONDecodeError:\n",
+    "        # Try to find JSON string within triple backticks\n",
+    "        match = re.search(r\"```(json)?(.*)\", json_string, re.DOTALL)\n",
+    "\n",
+    "        # If no match found, assume the entire string is a JSON string\n",
+    "        if match is None:\n",
+    "            json_str = json_string\n",
+    "        else:\n",
+    "            # If match found, use the content within the backticks\n",
+    "            json_str = match.group(2)\n",
+    "    return _parse_json(json_str, parser=parser)\n",
+    "\n",
+    "    def _parse_json(\n",
+    "    json_str: str, *, parser: Callable[[str], Any] = parse_partial_json\n",
+    ") -> dict:\n",
+    "    # Strip whitespace and newlines from the start and end\n",
+    "    json_str = json_str.strip().strip(\"`\")\n",
+    "\n",
+    "    # handle newlines and other special characters inside the returned value\n",
+    "    json_str = _custom_parser(json_str)\n",
+    "\n",
+    "    # Parse the JSON string into a Python dictionary\n",
+    "    return parser(json_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
