--- a/patterns/reflexion.ipynb
+++ b/patterns/reflexion.ipynb
@@ -297,6 +297,16 @@
     "\n",
     "logger.info(f\"after while loop exit, main_agent_final_answer: {main_agent_final_answer}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO:\n",
+    "- try examples that need atleast 6-7 trials\n",
+    "- reflections to be in react style instead of simple paragraph\n",
+    "- evaluation can be improved"
+   ]
   }
  ],
  "metadata": {
